.opsera-cwa-test-4/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-cwa-test-4-dev
  labels:
    tenant: opsera
    app: cwa-test-4
    environment: dev
    managed-by: opsera-c2c
